assets/block.css
.editor-styles-wrapper .editor-writing-flow {
	margin: 0 !important;
	width: 1090px !important;
	max-width: none !important;
}

.editor-post-title {
	padding: 0;
}

.editor-post-title .editor-post-title__input {
	font-size: 32px;
}

.wp-block-embed {
	min-width: 440px;
}

.editor-block-list__layout {
	padding: 0;
}

.edit-post-visual-editor .block-editor-block-list__block {
	margin: 0;
}

.wp-block {
	max-width: 100%;
}

.block-editor-block-list__block .block-editor-block-contextual-toolbar {
	position: absolute;
	top: -1px;
}

.block-editor-block-list__layout .block-editor-block-list__block[data-align=left] .block-editor-block-list__block-edit {
	float: left;
	margin-right: 1em;
}

.block-editor-block-list__layout .block-editor-block-list__block[data-align=right] .block-editor-block-list__block-edit {
	float: right;
	margin-left: 1em;
}

.wp-block[data-align=wide] {
	max-width: none;
}

.wp-block[data-align="wide"] video,
.wp-block[data-align="full"] video {
	width: 100%;
	display: block;
}

div[data-type="slide/slide"] {
	margin-bottom: 60px !important;
	width: 100% !important;
	max-width: none !important;
}

.block-editor-default-block-appender textarea.block-editor-default-block-appender__content {
	font-size: inherit;
	height: auto !important;
}

.block-editor-block-list__block[data-type="core/paragraph"] p {
	line-height: inherit;
}

.wp-block-slide-slide__body {
	position: relative;
	padding: 28.125px 50px;
	overflow: hidden;
	outline: 1px dashed currentColor;
}

.presentation-contain .wp-block-slide-slide__body {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.has-child-selected .wp-block-slide-slide__body {
	overflow: visible;
}

.wp-block-slide-slide {
	position: relative;
	width: 960px;
	height: 720px;
	padding: 0.2em;
}

html:not( .presentation-contain ) .wp-block-slide-slide {
	display: flex;
	flex-direction: column;
	justify-content: center;
	outline: 1px dashed currentColor;
}

.wp-block-slide-slide__background {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-repeat: no-repeat;
}

.wp-block-slide-slide__background iframe {
	width: 100%;
	height: 100%;
	max-height: 100%;
	max-width: 100%;
	pointer-events: none;
}

.is-selected .wp-block-slide-slide__background iframe {
	pointer-events: all;
}

.wp-block-slide-slide .fragment {
	opacity: 0.5;
}

div[data-type="slide/slide"] div[data-block] > .components-notice {
	margin: 0;
}

/* Hide appender displayed if a block or previous block is selected. */
.block-editor-inner-blocks .block-editor-block-list__block.is-selected + .block-list-appender,
.is-selected .block-editor-inner-blocks .block-editor-block-list__block + .block-list-appender {
	display: none;
}

/* Show appender if it's at the end of a list */
.block-editor-inner-blocks .block-editor-block-list__block.is-selected + .block-list-appender:last-child {
	display: block;
	height: 0;
	margin-top: 0;
	margin-bottom: 0;
}

.wp-block-slide-slide > div > div > .block-list-appender {
	height: auto;
	position: absolute;
	right: 0;
	margin: 0;
	left: 0;
}

.editor-styles-wrapper .wp-block-slide-slide [data-block] {
	margin-top: 0;
	margin-bottom: 0;
}

.wp-block-slide-slide h1,
.wp-block-slide-slide h2,
.wp-block-slide-slide h3,
.wp-block-slide-slide h4,
.wp-block-slide-slide h5,
.wp-block-slide-slide h6 {
	color: inherit;
}

.wp-block-slide-slide p {
	font-size: inherit;
	line-height: inherit;
}

.editor-styles-wrapper div[data-type="core/list"] ol,
.editor-styles-wrapper div[data-type="core/list"] ul {
	padding-left: 1em;
	margin-left: inherit;
}

.wp-block-slide-slide ul,
.wp-block-slide-slide ol {
	padding-left: 1em;
}

.wp-block-slide-slide li {
	margin-bottom: initial;
}

.wp-block-slide-slide ul {
	list-style-type: disc;
}

.wp-block-slide-slide ol {
	list-style-type: decimal;
}

.wp-block-slide-slide ul ul,
.wp-block-slide-slide ol ul {
	list-style-type: circle;
}

.wp-block-table table {
	border-collapse: unset;
}

.wp-block-slide-slide__body + .components-base-control,
.wp-block-slide-slide__body + .components-base-control textarea {
	line-height: 1.5;
	font-size: 42px;
}

.block-list-appender {
	display: none;
}

@media screen and (max-width: 1030px) {
	div.edit-post-layout:not(.is-sidebar-opened) div.wp-block-slide-slide__body.reveal {
		height: 0;
		padding-top: 75%;
		padding-left: 0;
		padding-right: 0;
		padding-bottom: 0;
		box-sizing: content-box;
	}

	div.edit-post-layout:not(.is-sidebar-opened) section.wp-block-slide-slide {
		position: absolute;
		width: 960px;
		height: 720px;
		left: 0%;
		top: 0%;
		bottom: auto;
		right: auto; 
	}
}

@media screen and (max-width: 1306px) {
	div.edit-post-layout.is-sidebar-opened div.wp-block-slide-slide__body.reveal {
		height: 0;
		padding-top: 75%;
		padding-left: 0;
		padding-right: 0;
		padding-bottom: 0;
		box-sizing: content-box;
	}

	div.edit-post-layout.is-sidebar-opened section.wp-block-slide-slide {
		position: absolute;
		width: 960px;
		height: 720px;
		left: 0%;
		top: 0%;
		bottom: auto;
		right: auto; 
	}
}

